--- a/New.css
+++ b/New.css
@@ -17,12 +17,12 @@ body {
 html {
     scroll-behavior: smooth;
 }
-
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=Raleway:wght@100;300;400&display=swap');
 * {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    font-family: 'Poppins', sans-serif; 
+    font-family: 'Raleway', sans-serif; 
 }
 ::selection{
     background: #fff;
